[metadata]
name = tdameritrade_ext
version = 0.0.1
author = Donald
author_email = donald.nguyen.it@gmail.com
description = This package extend from https://github.com/timkpaine/tdameritrade
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dearvn/tdameritrade_ext
project_urls =
    Bug Tracker = https://github.com/dearvn/tdameritrade_ext/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src